Fixes #9446 in 1.3.2.  Removed iequirks rule for TextBox subclasses since it was making the vertical alignment too high.
git-svn-id: http://svn.dojotoolkit.org/src/branches/1.3/dijit@18484 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/dijit.css
+++ b/themes/dijit.css
@@ -57,9 +57,6 @@
 .dj_ie .dijitInputField INPUT { /* try to get rid of IE implicit margin around INPUT */
 	margin: -1px 0 !important;
 }
-.dj_iequirks .dijitInputField INPUT { /* try to get rid of IE implicit margin around INPUT */
-	margin-top: -3px !important;
-}
 
 .dijitInlineTable {
 	/* To inline tables with a given width set (otherwise, use dijitInline above)
